WIP frame browser. Filename/position browser is working. Implemented DataframeStream.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180620 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180620 Trench detection.ipynb
@@ -34,7 +34,9 @@
     "import nd2reader\n",
     "from importlib import reload\n",
     "import traceback\n",
-    "import holoplot.pandas"
+    "import holoplot.pandas\n",
+    "import param\n",
+    "import parambokeh"
    ]
   },
   {
@@ -152,33 +154,6 @@
    "metadata": {},
    "source": [
     "# Debugging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_positions.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_positions[nd2_positions[\"position_name\"] == \"A01\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df2.head()"
    ]
   },
   {
@@ -419,6 +394,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_ts = (\n",
+    "    trench_both.reset_index()\n",
+    "    .groupby([\"filename\", \"position\", \"channel\"])\n",
+    "    .agg({\"t\": \"count\"})\n",
+    "    .rename(columns={\"t\": \"num_ts\"})\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bad_angle = trench_both[\"trench_rotation.hough_1.angle_sw\"].abs() > 2"
    ]
   },
@@ -440,7 +429,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_both[bad_angle]"
+    "selected = trench_both[bad_angle]"
    ]
   },
   {
@@ -449,7 +438,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_ts = selected.groupby([\"filename\", \"position\", \"channel\"]).count()"
+    "num_selected_ts = (\n",
+    "    selected.reset_index()\n",
+    "    .groupby([\"filename\", \"position\", \"channel\"])\n",
+    "    .agg({\"t\": \"count\"})\n",
+    "    .rename(columns={\"t\": \"num_selected_ts\"})\n",
+    ")"
    ]
   },
   {
@@ -458,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_ts"
+    "trench_both2 = util.multi_join(util.multi_join(trench_both, num_ts), num_selected_ts)"
    ]
   },
   {
@@ -467,7 +461,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "util.multi_join(trench_both, num_ts)"
+    "trench_both2[(trench_both2[\"num_selected_ts\"] == 2) & bad_angle]"
    ]
   },
   {
@@ -476,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_both[num_ts == ]"
+    "rows = _.reset_index()"
    ]
   },
   {
@@ -485,21 +479,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected = trench_both[bad_angle].reset_index()[\n",
-    "    [\"filename\", \"position\", \"channel_idx\", \"t\"]\n",
-    "]\n",
-    "frames = [\n",
-    "    nd2s[row.filename].get_frame_2D(v=row.position, t=row.t, c=row.channel_idx)\n",
-    "    for row in selected.itertuples()\n",
-    "]"
+    "frames = {\n",
+    "    row: nd2s[row.filename].get_frame_2D(v=row.position, t=row.t, c=row.channel_idx)\n",
+    "    for row in rows.itertuples()\n",
+    "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -508,7 +492,15 @@
    "outputs": [],
    "source": [
     "%%output size=200\n",
-    "regrid(hv.HoloMap({idx: ui.RevImage(frame) for idx, frame in enumerate(frames)}))"
+    "regrid(\n",
+    "    hv.HoloMap(\n",
+    "        {\n",
+    "            (row.filename, row.position, row.t, row.channel_idx): ui.RevImage(frame)\n",
+    "            for row, frame in frames.items()\n",
+    "        },\n",
+    "        kdims=[\"f\", \"v\", \"t\", \"c\"],\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -577,6 +569,94 @@
     "    y=\"trench_rotation.hough_1.angle_sw\",\n",
     "    kind=\"scatter\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Viewer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = example.params()[\"magnitude\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example.__dict__.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example.print_param_defaults()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser_filenames = selected.index.get_level_values(0).unique().tolist()\n",
+    "\n",
+    "\n",
+    "class ImageBrowser(param.Parameterized):\n",
+    "\n",
+    "    upper_bound = param.Number(100, bounds=(0, 200))\n",
+    "    magnitude = param.Number(1, bounds=(0, upper_bound.default))\n",
+    "    filenames = param.ObjectSelector(\n",
+    "        default=browser_filenames[0], objects=browser_filenames\n",
+    "    )\n",
+    "\n",
+    "    output = parambokeh.view.HTML()\n",
+    "\n",
+    "    def update(self, **kwargs):\n",
+    "        self.params()[\"magnitude\"].bounds = (0, self.upper_bound)\n",
+    "        self.output = pd.DataFrame(np.random.rand(10, 2) * self.magnitude).to_html()\n",
+    "\n",
+    "\n",
+    "example = ImageBrowser(name=\"Image Browser\")\n",
+    "layout = parambokeh.Widgets(example, on_init=True, callback=example.update)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Location(param.Parameterized):\n",
+    "    duration = param.Integer(default=5, bounds=(0, 10))\n",
+    "\n",
+    "\n",
+    "class Employee(param.Parameterized):\n",
+    "    age = param.Integer(default=30, bounds=(18, 100))\n",
+    "    location = param.ObjectSelector(\n",
+    "        objects=[Location(name=\"One\"), Location(name=\"Two\")]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class Task(param.Parameterized):\n",
+    "    employee = param.ObjectSelector(objects=[Employee(name=\"A\"), Employee(name=\"B\")])\n",
+    "\n",
+    "\n",
+    "example = Task()\n",
+    "layout = parambokeh.Widgets(example)\n",
+    "# layout = parambokeh.Widgets(example, on_init=True, callback=example.update)"
    ]
   },
   {
