--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180621 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180621 Trench detection.ipynb
@@ -26,6 +26,7 @@
     "from holoviews.operation.datashader import regrid\n",
     "from bokeh.models.tools import HoverTool\n",
     "import matplotlib.pyplot as plt\n",
+    "import qgrid\n",
     "from tqdm import tnrange, tqdm, tqdm_notebook\n",
     "import warnings\n",
     "from functools import partial\n",
@@ -34,7 +35,11 @@
     "import nd2reader\n",
     "from importlib import reload\n",
     "import traceback\n",
-    "import holoplot.pandas"
+    "import holoplot.pandas\n",
+    "import param\n",
+    "import parambokeh\n",
+    "from traitlets import All\n",
+    "import cachetools"
    ]
   },
   {
@@ -43,8 +48,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%load_ext autoreload\n",
-    "#%autoreload 2"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -152,33 +157,6 @@
    "metadata": {},
    "source": [
     "# Debugging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_positions.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_positions[nd2_positions[\"position_name\"] == \"A01\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df2.head()"
    ]
   },
   {
@@ -419,6 +397,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_ts = (\n",
+    "    trench_both.reset_index()\n",
+    "    .groupby([\"filename\", \"position\", \"channel\"])\n",
+    "    .agg({\"t\": \"count\"})\n",
+    "    .rename(columns={\"t\": \"num_ts\"})\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bad_angle = trench_both[\"trench_rotation.hough_1.angle_sw\"].abs() > 2"
    ]
   },
@@ -440,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_both[bad_angle]"
+    "selected = trench_both[bad_angle]"
    ]
   },
   {
@@ -449,7 +441,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_ts = selected.groupby([\"filename\", \"position\", \"channel\"]).count()"
+    "num_selected_ts = (\n",
+    "    selected.reset_index()\n",
+    "    .groupby([\"filename\", \"position\", \"channel\"])\n",
+    "    .agg({\"t\": \"count\"})\n",
+    "    .rename(columns={\"t\": \"num_selected_ts\"})\n",
+    ")"
    ]
   },
   {
@@ -458,7 +455,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_ts"
+    "trench_both2 = util.multi_join(util.multi_join(trench_both, num_ts), num_selected_ts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test"
    ]
   },
   {
@@ -467,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "util.multi_join(trench_both, num_ts)"
+    "selected_stream = ui.Selected()"
    ]
   },
   {
@@ -476,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_both[num_ts == ]"
+    "df = trench_both2[(trench_both2[\"num_selected_ts\"] == 1) & bad_angle]"
    ]
   },
   {
@@ -485,13 +489,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected = trench_both[bad_angle].reset_index()[\n",
-    "    [\"filename\", \"position\", \"channel_idx\", \"t\"]\n",
-    "]\n",
-    "frames = [\n",
-    "    nd2s[row.filename].get_frame_2D(v=row.position, t=row.t, c=row.channel_idx)\n",
-    "    for row in selected.itertuples()\n",
-    "]"
+    "ui.show_grid(df, stream=selected_stream)"
    ]
   },
   {
@@ -499,7 +497,125 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "reload(ui)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=150\n",
+    "ui.image_viewer(selected_stream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Old"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rows = _.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frames = {\n",
+    "    row: nd2s[row.filename].get_frame_2D(v=row.position, t=row.t, c=row.channel_idx)\n",
+    "    for row in rows.itertuples()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = qgrid.show_grid(trench_both2, grid_options={\"forceFitColumns\": False})\n",
+    "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Frame = Stream.define(\"Frame\", idx=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_list = list(frames.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_stream = Frame(idx=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def callback(idx, x_range, y_range):\n",
+    "    img = ui.RevImage(frame_list[idx]).options(\n",
+    "        title_format=\"{} {} {}\".format(*trench_both2.index[idx][1:])\n",
+    "    )\n",
+    "    return regrid.instance(\n",
+    "        dynamic=False, x_range=x_range, y_range=y_range, aggregator=\"first\"\n",
+    "    )(img).redim.range(z=(0, img.data.max()))\n",
+    "\n",
+    "\n",
+    "dmap = hv.DynamicMap(callback, streams=[frame_stream, hv.streams.RangeXY()])\n",
+    "dmap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_stream.event(idx=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def handle_selection_changed(event, widget):\n",
+    "    frame_stream.event(idx=int(event[\"new\"][0]))\n",
+    "\n",
+    "\n",
+    "g.on(\"selection_changed\", handle_selection_changed)"
+   ]
   },
   {
    "cell_type": "code",
@@ -508,7 +624,27 @@
    "outputs": [],
    "source": [
     "%%output size=200\n",
-    "regrid(hv.HoloMap({idx: ui.RevImage(frame) for idx, frame in enumerate(frames)}))"
+    "regrid(\n",
+    "    hv.HoloMap({idx: ui.RevImage(frame) for idx, frame in enumerate(frames.values())})\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200\n",
+    "regrid(\n",
+    "    hv.HoloMap(\n",
+    "        {\n",
+    "            (row.filename, row.position, row.t, row.channel_idx): ui.RevImage(frame)\n",
+    "            for row, frame in frames.items()\n",
+    "        },\n",
+    "        kdims=[\"f\", \"v\", \"t\", \"c\"],\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -576,6 +712,115 @@
     "    x=\"trench_rotation.hough_1.angle\",\n",
     "    y=\"trench_rotation.hough_1.angle_sw\",\n",
     "    kind=\"scatter\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Viewer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = example.params()[\"magnitude\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example.__dict__.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "example.print_param_defaults()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser_filenames = selected.index.get_level_values(0).unique().tolist()\n",
+    "\n",
+    "\n",
+    "class ImageBrowser(param.Parameterized):\n",
+    "\n",
+    "    upper_bound = param.Number(100, bounds=(0, 200))\n",
+    "    magnitude = param.Number(1, bounds=(0, upper_bound.default))\n",
+    "    filenames = param.ObjectSelector(\n",
+    "        default=browser_filenames[0], objects=browser_filenames\n",
+    "    )\n",
+    "\n",
+    "    output = parambokeh.view.HTML()\n",
+    "\n",
+    "    def update(self, **kwargs):\n",
+    "        self.params()[\"magnitude\"].bounds = (0, self.upper_bound)\n",
+    "        self.output = pd.DataFrame(np.random.rand(10, 2) * self.magnitude).to_html()\n",
+    "\n",
+    "\n",
+    "example = ImageBrowser(name=\"Image Browser\")\n",
+    "layout = parambokeh.Widgets(example, on_init=True, callback=example.update)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Location(param.Parameterized):\n",
+    "    duration = param.Integer(default=5, bounds=(0, 10))\n",
+    "\n",
+    "\n",
+    "class Employee(param.Parameterized):\n",
+    "    age = param.Integer(default=30, bounds=(18, 100))\n",
+    "    location = param.ObjectSelector(\n",
+    "        objects=[Location(name=\"One\"), Location(name=\"Two\")]\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "class Task(param.Parameterized):\n",
+    "    employee = param.ObjectSelector(objects=[Employee(name=\"A\"), Employee(name=\"B\")])\n",
+    "\n",
+    "\n",
+    "example = Task()\n",
+    "layout = parambokeh.Widgets(example)\n",
+    "# layout = parambokeh.Widgets(example, on_init=True, callback=example.update)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qgrid.show_grid(selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=200\n",
+    "regrid(\n",
+    "    hv.HoloMap({idx: ui.RevImage(frame) for idx, frame in enumerate(frames.values())})\n",
     ")"
    ]
   },
