--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
@@ -26,6 +26,8 @@
     "from holoviews.operation.datashader import regrid\n",
     "from bokeh.models.tools import HoverTool\n",
     "import matplotlib.pyplot as plt\n",
+    "import qgrid\n",
+    "import ipywidgets as widgets\n",
     "from tqdm import tnrange, tqdm, tqdm_notebook\n",
     "import warnings\n",
     "from functools import partial\n",
@@ -34,7 +36,11 @@
     "import nd2reader\n",
     "from importlib import reload\n",
     "import traceback\n",
-    "import holoplot.pandas"
+    "import holoplot.pandas\n",
+    "import param\n",
+    "import parambokeh\n",
+    "from traitlets import All\n",
+    "import cachetools"
    ]
   },
   {
@@ -43,8 +49,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#%load_ext autoreload\n",
-    "#%autoreload 2"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -152,33 +158,6 @@
    "metadata": {},
    "source": [
     "# Debugging"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_positions.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nd2_positions[nd2_positions[\"position_name\"] == \"A01\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_df2.head()"
    ]
   },
   {
@@ -419,6 +398,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "num_ts = (\n",
+    "    trench_both.reset_index()\n",
+    "    .groupby([\"filename\", \"position\", \"channel\"])\n",
+    "    .agg({\"t\": \"count\"})\n",
+    "    .rename(columns={\"t\": \"num_ts\"})\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "bad_angle = trench_both[\"trench_rotation.hough_1.angle_sw\"].abs() > 2"
    ]
   },
@@ -440,7 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trench_both[bad_angle]"
+    "selected = trench_both[bad_angle]"
    ]
   },
   {
@@ -449,141 +442,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_ts = selected.groupby([\"filename\", \"position\", \"channel\"]).count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_ts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "util.multi_join(trench_both, num_ts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_both[num_ts == ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "selected = trench_both[bad_angle].reset_index()[\n",
-    "    [\"filename\", \"position\", \"channel_idx\", \"t\"]\n",
-    "]\n",
-    "frames = [\n",
-    "    nd2s[row.filename].get_frame_2D(v=row.position, t=row.t, c=row.channel_idx)\n",
-    "    for row in selected.itertuples()\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%output size=200\n",
-    "regrid(hv.HoloMap({idx: ui.RevImage(frame) for idx, frame in enumerate(frames)}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regrid(hv.HoloMap({str(idx): ui.RevImage(frame) for idx, frame in zip(idxs, frames)}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bad_angle[bad_angle]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(trench_both[bad_angle].reset_index()[[\"filename\", \"position\"]].drop_duplicates())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = trench_both[bad_angle].reset_index()[['filename','position']].drop_duplicates()\n",
-    "{ui.RevImage(nd2s[])}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum(bad_angle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.sum(np.logical_or(bad_period, bad_angle))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trench_both.reset_index().holoplot(\n",
-    "    x=\"trench_rotation.hough_1.angle\",\n",
-    "    y=\"trench_rotation.hough_1.angle_sw\",\n",
-    "    kind=\"scatter\",\n",
+    "num_selected_ts = (\n",
+    "    selected.reset_index()\n",
+    "    .groupby([\"filename\", \"position\", \"channel\"])\n",
+    "    .agg({\"t\": \"count\"})\n",
+    "    .rename(columns={\"t\": \"num_selected_ts\"})\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_both2 = util.multi_join(util.multi_join(trench_both, num_ts), num_selected_ts)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scratch"
+    "# Test"
    ]
   },
   {
@@ -592,7 +472,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = nd2reader.ND2Reader(\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2\")"
+    "df = trench_both2[(trench_both2[\"num_selected_ts\"] == 1) & bad_angle]"
    ]
   },
   {
@@ -601,7 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import metadata"
+    "df2 = df.index.to_frame(index=False)"
    ]
   },
   {
@@ -610,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = metadata.parse_nd2_metadata(n)"
+    "ui.show_grid(df, stream=selected_stream)"
    ]
   },
   {
@@ -619,7 +499,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.keys()"
+    "reload(ui)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%output size=150\n",
+    "ui.image_viewer(selected_stream)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prototyping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FrameChannels = Stream.define(\n",
+    "    \"FrameChannels\", channel_enabled=None, channel_colors=None\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(ui)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = df.index[0]\n",
+    "df2 = df.index.to_frame()\n",
+    "filenames = df2[\"filename\"].unique().tolist()\n",
+    "FrameStream = ui.DataframeStream.define(\"FrameStream\", df2)\n",
+    "frame_stream = FrameStream()\n",
+    "\n",
+    "filename_browser = ui.filename_browser(df2, frame_stream)\n",
+    "position_browser = ui.position_browser(df2, frame_stream)\n",
+    "widgets.VBox([filename_browser, position_browser])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_stream.event(filename=filenames[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame_stream"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = widgets.Output()\n",
+    "\n",
+    "\n",
+    "def func(**kwargs):\n",
+    "    del kwargs[\"_df\"]\n",
+    "    with out:\n",
+    "        print(\"out\", kwargs)\n",
+    "\n",
+    "\n",
+    "frame_stream.add_subscriber(func)\n",
+    "out"
    ]
   },
   {
