Simplified frame browser by implementing filename_browser and position_browser as a single function, column_browser.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
@@ -551,8 +551,10 @@
     "FrameStream = ui.DataframeStream.define(\"FrameStream\", df2)\n",
     "frame_stream = FrameStream()\n",
     "\n",
-    "filename_browser = ui.filename_browser(df2, frame_stream)\n",
-    "position_browser = ui.position_browser(df2, frame_stream)\n",
+    "filename_browser = ui.column_browser(\"filename\", frame_stream)\n",
+    "position_browser = ui.column_browser(\n",
+    "    \"position\", frame_stream, widget=widgets.SelectionSlider\n",
+    ")\n",
     "widgets.VBox([filename_browser, position_browser])"
    ]
   },
