Implemented dataframe_browser.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
@@ -564,6 +564,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.dtype(\"uint32\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "issubclass(df2.dtypes[\"position\"].type, numbers.Number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dataframe_browser(stream):\n",
+    "    browsers = []\n",
+    "    for column, dtype in stream._df.dtypes.iteritems():\n",
+    "        if issubclass(dtype.type, numbers.Number):\n",
+    "            kwargs = {\"widget\": widgets.SelectionSlider}\n",
+    "        else:\n",
+    "            kwargs = {}\n",
+    "        browsers.append(ui.column_browser(column, stream, **kwargs))\n",
+    "    return widgets.VBox(browsers)\n",
+    "\n",
+    "\n",
+    "dataframe_browser(frame_stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "frame_stream.event(filename=filenames[0])"
    ]
   },
