Working image_viewer+dataframe_browser+qgrid.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
@@ -485,34 +485,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_grid(df, stream=selected_stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reload(ui)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%output size=150\n",
-    "ui.image_viewer(selected_stream)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -545,17 +517,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "row = df.index[0]\n",
-    "df2 = df.index.to_frame()\n",
-    "filenames = df2[\"filename\"].unique().tolist()\n",
     "FrameStream = ui.DataframeStream.define(\"FrameStream\", df2)\n",
     "frame_stream = FrameStream()\n",
     "\n",
-    "filename_browser = ui.column_browser(\"filename\", frame_stream)\n",
-    "position_browser = ui.column_browser(\n",
-    "    \"position\", frame_stream, widget=widgets.SelectionSlider\n",
-    ")\n",
-    "widgets.VBox([filename_browser, position_browser])"
+    "box = ui.dataframe_browser(frame_stream)\n",
+    "frame_stream.event()\n",
+    "box"
    ]
   },
   {
@@ -564,7 +531,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numbers"
+    "g = ui.show_grid(df, stream=frame_stream)\n",
+    "g"
    ]
   },
   {
@@ -573,7 +541,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = np.dtype(\"uint32\")"
+    "reload(ui)"
    ]
   },
   {
@@ -582,7 +550,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a.type"
+    "ui.image_viewer(frame_stream)"
    ]
   },
   {
@@ -590,66 +558,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "issubclass(df2.dtypes[\"position\"].type, numbers.Number)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dataframe_browser(stream):\n",
-    "    browsers = []\n",
-    "    for column, dtype in stream._df.dtypes.iteritems():\n",
-    "        if issubclass(dtype.type, numbers.Number):\n",
-    "            kwargs = {\"widget\": widgets.SelectionSlider}\n",
-    "        else:\n",
-    "            kwargs = {}\n",
-    "        browsers.append(ui.column_browser(column, stream, **kwargs))\n",
-    "    return widgets.VBox(browsers)\n",
-    "\n",
-    "\n",
-    "dataframe_browser(frame_stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_stream.event(filename=filenames[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "frame_stream"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out = widgets.Output()\n",
-    "\n",
-    "\n",
-    "def func(**kwargs):\n",
-    "    del kwargs[\"_df\"]\n",
-    "    with out:\n",
-    "        print(\"out\", kwargs)\n",
-    "\n",
-    "\n",
-    "frame_stream.add_subscriber(func)\n",
-    "out"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
