Minor renaming of plot_browser, show_plot_browser now takes a period-separated key into the dict. Did not test that this works with streams.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180622 Trench detection.ipynb
@@ -541,6 +541,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ui.image_viewer(frame_stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_, diag, _ = diagnostics.wrap_diagnostics(trench_detection.get_trenches)(\n",
+    "    workflow.get_nd2_frame(**dict(frame_stream.get_param_values()))\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "reload(ui)"
    ]
   },
@@ -550,15 +570,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.image_viewer(frame_stream)"
+    "ui.show_plot_browser(diag, \"label_1.trench_rotation.hough_1\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
