Fixed qgrid update-in-place, show_frame_info is fast now.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/180622.2 Trench detection.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/180622.2 Trench detection.ipynb
@@ -495,6 +495,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ui.show_frame_info(trench_both2, frame_stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "g = ui.show_grid(df, stream=frame_stream)\n",
     "g"
    ]
@@ -506,15 +515,6 @@
    "outputs": [],
    "source": [
     "ui.image_viewer(frame_stream)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ui.show_frame_info(trench_both2, frame_stream)"
    ]
   },
   {
@@ -544,6 +544,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ui.show_plot_browser(diag, \"label_1.trench_rotation.hough_1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# QG"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df3 = df2.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qg = ui.show_grid(df3)\n",
+    "qg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "reload(ui)"
    ]
   },
@@ -553,7 +588,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui.show_plot_browser(diag, \"label_1.trench_rotation.hough_1\")"
+    "qg = ui.show_frame_info(trench_both2, frame_stream)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = 5\n",
+    "qg._df.loc[:, 0] = trench_both2.reset_index().iloc[idx]\n",
+    "qg._unfiltered_df.loc[:, 0] = trench_both2.reset_index().iloc[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qg._update_table(triggered_by=\"cell_change\", fire_data_change_event=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trench_both2.iloc[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = 0\n",
+    "column = \"t\"\n",
+    "value = 2\n",
+    "qg._df.loc[index, column] = value\n",
+    "qg._unfiltered_df.loc[index, column] = value\n",
+    "qg._update_table(triggered_by=\"cell_change\", fire_data_change_event=True)\n",
+    "# qg._trigger_df_change_event()"
    ]
   },
   {
