--- a/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/todo.txt
@@ -1,9 +1,16 @@
 ### TODAY
+first pass at fast normalize_componentwise??
+get rid of large components before image normalization
+smooth diff_h_std (2 pixel kernel)
+synchronize show_plot_browser StreamXY [only images]
+
+easy dask re-running of trench detection on bad_angle frames
+fix detrending? (is this necessary?)
+intensity hough on hessian k2
+OR upsample before intensity hough
+run periodicity detection on componentwise normalized image with ALL components, not just selected trench set?
 run charles segmentation locally on one frame stack
 run my segmentation locally on one frame stack
-look at txnerr002, pos87, t0: why bad angle?
-    intensity hough on hessian k2
-    OR upsample before intensity hough
 run my trench detection+segmentation using dask (gather all diags, just using one time point)
 
 ### TOMORROW
@@ -19,6 +26,7 @@ run charles segmentation locally on one frame stack
 run my trench detection+charles segmentation using dask
 do the same for charles phase segmentation, compare with fluorescence
 trench finding in phase
+corrupted nd2 reader
 
 ###AFTER
 my trench detection in phase+charles phase segmentation using dask
